Improve performance for profiler initialization. Add logging capability to the default view. Add DOM builder functions.

--- a/jsprofile.html
+++ b/jsprofile.html
@@ -9,7 +9,7 @@
 <p>This page demonstrates the simplest bare-bones usage of jsprofile with the bundled default profiler view.</p>
 <pre id="pre"></pre>
 <script>
-var dpv = new DefaultProfilerView('dpv', 'div');
+var dpv = new DefaultProfilerView('div');
 </script>
 </body>
 
