--- a/trunk/test/unit/jsprofileTests.html
+++ b/trunk/test/unit/jsprofileTests.html
@@ -6,11 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>JSProfile Tests</title>
 <link rel="stylesheet" type="text/css" href="../css/jsUnitStyle.css">
-<script language="JavaScript" type="text/javascript" src="../jsunit/app/jsUnitCore.js"></script>
-<script language="JavaScript" type="text/javascript" src="../tools.js"></script>
-<script language="JavaScript" type="text/javascript" src="../narcissus-defs.js"></script>
-<script language="JavaScript" type="text/javascript" src="../narcissus-parse.js"></script>
-<script language="JavaScript" type="text/javascript" src="../jsprofile.js"></script>
+<script language="JavaScript" type="text/javascript" src="../../jsunit/app/jsUnitCore.js"></script>
+<script language="JavaScript" type="text/javascript" src="../../jsprofile.js"></script>
 <script language="JavaScript" type="text/javascript">
 
 
