--- a/jsprofile.html
+++ b/jsprofile.html
@@ -8,7 +8,7 @@
 <div id="div"></div>
 <p>This page demonstrates the simplest bare-bones usage of jsprofile with the bundled default profiler view.</p>
 
-<p>You might also want to try the functional tests. For browsers other than Firefox, the files will need to be hosted by a web server. If using Apache, configure <code>DocumentRoot</code> to be the directory containing this HTML file, and navigate to it via <a href="http://localhost/jsprofile.html">http://localhost/jsprofile.html</a>. Alternatively, copy the <em>jsprofile</em> directory to somewhere under your <em>htdocs</em>.</p>
+<p>You might also want to try the functional tests. The external javascript files will need to be hosted by a web server, as they are fetched with AJAX. If using Apache, configure <code>DocumentRoot</code> to be the directory containing this HTML file, and navigate to it via <a href="http://localhost/jsprofile.html">http://localhost/jsprofile.html</a>. Alternatively, copy the <em>jsprofile</em> directory to somewhere under your <em>htdocs</em>.</p>
 
 <ul>
 <li><a href="test/functional/ajaxslt/news.google.com.html">Ajaxslt Functional Test</a></li>
