--- a/trunk/index.html
+++ b/trunk/index.html
@@ -1,11 +1,16 @@
 <html>
 <head>
 <title>jsprofile Usage</title>
+<style type="text/css">
+p {
+    margin: 1em, 0, 1em, 0;
+}
+</style>
 <script src="jsprofile.js"></script>
 </head>
 
 <body>
-<p><span style="font-size: xx-large;">This page will help you get started with using <a href="http://code.google.com/p/jsprofile/">jsprofile</span></a></span>.</p>
+<p><span style="font-size: x-large;">This page will help you get started with using <a href="http://code.google.com/p/jsprofile/">jsprofile</a>.</span></p>
 
 <p>The external javascript files will need to be hosted by a web server, as they are fetched with AJAX. If using Apache, configure <code>DocumentRoot</code> to be the parent directory of the directory containing <em>jsprofile.js</em> and this HTML file, and navigate to it via <a href="http://localhost/jsprofile/index.html">http://localhost/jsprofile/index.html</a>. Alternatively, copy the <em>jsprofile</em> directory to somewhere under your <em>htdocs</em>.</p>
 
