Update ajaxslt functional test

--- a/test/functional/ajaxslt/news.google.com.html
+++ b/test/functional/ajaxslt/news.google.com.html
@@ -47,6 +47,7 @@ context.setCaseInsensitive(true);
 context.setIgnoreAttributesWithoutValue(true);
 var xpath = "//td[descendant::a[@class='ks' and font[starts-with(text(), 'Sci/Tech')]]]/descendant::div[@class='lh'][2]/descendant::nobr";
 var xpathObj = xpathParse(xpath);
+context.setInPlayAttributes(getAttributeNodeTestNames(xpathObj));
 
 function computeXPath() {
     var startTime = new Date();
@@ -54,7 +55,8 @@ function computeXPath() {
     var endTime = new Date();
     if (xpathResult && xpathResult.value) {
         dpv.info('Computed ' + xpathResult.value.length + ' results in '
-            + (endTime - startTime) + 'ms');
+            + (endTime - startTime) + 'ms (' + xpathResult.value[0].innerHTML
+            + ')...');
     }
 }
 </script>
